--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -272,12 +272,12 @@
 
 @layer base {
     * {
-        border-color: hsl(var(--border));
+        border-color: var(--border);
     }
 
     body {
-        background-color: hsl(var(--background));
-        color: hsl(var(--foreground));
+        background-color: var(--background);
+        color: var(--foreground);
     }
 }
 
